--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -16,8 +18,8 @@
         android:orientation="vertical" />
 
     <FrameLayout
-        android:layout_width="130dp"
-        android:layout_height="120dp"
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
         android:layout_below="@id/host_rpm"
         android:layout_centerHorizontal="true">
 
@@ -31,8 +33,8 @@
             android:fontFamily="@font/seven_segment"
             android:gravity="top|start"
             android:paddingTop="2dp"
-            android:text="65"
-            android:textSize="100sp"
+            android:text="0"
+            android:textSize="160sp"
             android:textStyle="bold" />
 
         <TextView
@@ -78,6 +80,7 @@
                 app:drawableTint="@color/white" />
 
             <TextView
+                android:id="@+id/average_speed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/baseline_speed_24"
@@ -104,40 +107,8 @@
             android:layout_centerHorizontal="true"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_thermostat_24"
-                    app:tint="@color/white" />
-
-                <ProgressBar
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:layout_width="150dp"
-                    android:layout_height="20dp"
-                    android:max="100"
-                    android:progress="33" />
-                <TextView
-                    android:text=" OK"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-
             <TextView
+                android:id="@+id/remaining_on_tank"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="8dp"
@@ -164,6 +135,7 @@
                 app:tint="@color/white" />
 
             <TextView
+                android:id="@+id/current_consumption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -172,6 +144,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/instant_consumption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -183,6 +156,7 @@
                 app:drawableTint="@color/white" />
 
             <TextView
+                android:id="@+id/total_consumption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
