--- a/app/src/main/res/layout/activity_guages_screen.xml
+++ b/app/src/main/res/layout/activity_guages_screen.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:gravity="center_horizontal"
-    android:focusable="true"
     android:clickable="true"
+    android:focusable="true"
+    android:gravity="center_horizontal"
     tools:context="com.keronei.kmlguage.GuagesScreenActivity">
 
     <LinearLayout
@@ -33,7 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/soul_daisy"
-                android:text="16.5"
+                android:text="0.0"
+                android:singleLine="true"
                 android:textSize="48sp"
                 app:drawableTint="#d83a78" />
 
@@ -62,13 +63,14 @@
             android:paddingTop="10dp">
 
             <TextView
+                android:id="@+id/remaining_distance_in_tank"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="2dp"
                 android:fontFamily="@font/soul_daisy"
-                android:text="305"
-                android:id="@+id/remaining_distance_in_tank"
-                android:textSize="48sp"
+                android:text="0.0"
+                android:singleLine="true"
+                android:textSize="38sp"
                 app:drawableTint="#d83a78" />
 
             <TextView
@@ -115,12 +117,22 @@
             android:orientation="vertical">
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/soul_daisy"
+                android:gravity="center_horizontal"
+                android:text="Current"
+                android:textColor="#d83a78"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/current_lkm"
+                android:layout_marginTop="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawablePadding="2dp"
                 android:fontFamily="@font/soul_daisy"
-                android:text="16.5"
-                android:id="@+id/current_lkm"
+                android:text="0.0"
+                android:singleLine="true"
                 android:textSize="48sp"
                 app:drawableTint="#d83a78" />
 
@@ -134,12 +146,6 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/baseline_instant_graph_24"
-            app:tint="#d83a78" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -149,13 +155,23 @@
             android:orientation="vertical">
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/soul_daisy"
+                android:gravity="center_horizontal"
+                android:text="Instant"
+                android:textColor="#d83a78"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/instant_lkm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawablePadding="2dp"
                 android:fontFamily="@font/soul_daisy"
-                android:text="17.5"
-                android:id="@+id/instant_lkm"
-                android:textSize="64sp"
+                android:text="0.0"
+                android:singleLine="true"
+                android:layout_marginTop="12dp"
+                android:textSize="52sp"
                 app:drawableTint="#d83a78" />
 
             <TextView
