--- a/app/src/main/res/layout/activity_guages_screen.xml
+++ b/app/src/main/res/layout/activity_guages_screen.xml
@@ -12,7 +12,7 @@
     tools:context="com.keronei.kmlguage.GuagesScreenActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -35,7 +35,7 @@
                 android:fontFamily="@font/soul_daisy"
                 android:text="0.0"
                 android:singleLine="true"
-                android:textSize="48sp"
+                android:textSize="38sp"
                 app:drawableTint="#d83a78" />
 
             <TextView
@@ -100,11 +100,11 @@
         app:textColor="#f5f5f5" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="16dp"
+        android:layout_margin="6dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -148,10 +148,10 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -171,7 +171,7 @@
                 android:text="0.0"
                 android:singleLine="true"
                 android:layout_marginTop="12dp"
-                android:textSize="52sp"
+                android:textSize="40sp"
                 app:drawableTint="#d83a78" />
 
             <TextView
